# codetok

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codebase_analysis.json  lint.sh  pyproject.toml  requirements.txt  test_analysis.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
codetok/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  formatters.py  parser.py  ui.py  utils.py
docs/: conf.py  index.rst
examples/: analyze_sample.py
tests/: test_advanced.py  test_basic.py  test_cli.py  test_config.py  test_parser.py
